# kanzen

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs
src/commands/: anilist.rs  misc.rs  mod.rs  schedule.rs
src/database/: anilist.rs  apps.rs  mod.rs  schedule.rs
src/helpers/: anilist.rs  common.rs  constants.rs  mod.rs
src/helpers/anilist/: mod.rs  oauth.rs  structs.rs
src/helpers/schedule/: core.rs  mod.rs  structs.rs
